service.yaml
apiVersion: v1
kind: Service
metadata:
  name: Rails_Docker_Compose_PSQl
spec:
  selector:
    app: Rails_Docker_Compose_PSQl
  ports:
  - port: 80
    targetPort: 3000
